Table sot_systems {

  system_id bigint [pk, increment]

  system_code varchar(50) [not null, unique]

  system_name varchar(100) [not null]

  system_type varchar(30) [not null, note: 'APPLICATION, DATABASE, REPORTING, EXTERNAL']

  description text

  status varchar(20) [not null, default: 'ACTIVE']

  created_at timestamp [not null]

  updated_at timestamp

}


Table sot_modules {

  module_id bigint [pk, increment]

  module_code varchar(50) [not null, unique]

  module_name varchar(100) [not null]

  description text

  status varchar(20) [not null, default: 'ACTIVE']

  created_at timestamp [not null]

  updated_at timestamp

}


Table sot_business_processes {

  process_id bigint [pk, increment]

  module_id bigint [not null]

  process_code varchar(100) [not null, unique]

  process_name varchar(150) [not null]

  description text

  status varchar(20) [not null, default: 'ACTIVE']

  created_at timestamp [not null]

  updated_at timestamp

}


Table sot_data_entities {

  entity_id bigint [pk, increment]

  entity_code varchar(100) [not null, unique]

  entity_name varchar(150) [not null]

  description text

  status varchar(20) [not null, default: 'ACTIVE']

  created_at timestamp [not null]

  updated_at timestamp

}



Table sot_entity_tables {

  entity_table_id bigint [pk, increment]

  entity_id bigint [not null]

  system_id bigint [not null]

  schema_name varchar(100) [not null]

  table_name varchar(150) [not null]

  is_primary boolean [not null, default: false]

  status varchar(20) [not null, default: 'ACTIVE']

  created_at timestamp [not null]

  updated_at timestamp

  indexes {

    (system_id, schema_name, table_name) [unique]

  }

}


Table sot_config {

  sot_id bigint [pk, increment]

  entity_id bigint [not null]

  process_id bigint [not null]

  source_system_id bigint [not null]

  target_system_id bigint

  sync_direction varchar(20) [not null, note: 'LEGACY_TO_NEW, NEW_TO_LEGACY, BIDIRECTIONAL, NONE']

  sync_mode varchar(20) [not null, note: 'CDC, API, BATCH, MANUAL']

  status varchar(20) [not null, note: 'MIGRATING, COMPLETED, PAUSED']

  effective_from date [not null]

  cutover_at timestamp

  notes varchar(255)

  created_at timestamp [not null]

  updated_at timestamp

  updated_by varchar(50)

  indexes {

    (entity_id, effective_from) [unique]

    source_system_id

    target_system_id

    process_id

  }

  note: 'Konfigurasi Source of Truth untuk menentukan system yang menjadi sumber kebenaran data dan arah sinkronisasi.'

}


// =====================================================
// RELATIONSHIPS
// =====================================================

// Module -> Business Process
Ref: sot_business_processes.module_id > sot_modules.module_id


// Business Process -> Systems
// Ref: sot_process_systems.process_id > sot_business_processes.process_id

// Ref: sot_process_systems.system_id > sot_systems.system_id


// Data Entity -> Physical Tables
Ref: sot_entity_tables.entity_id > sot_data_entities.entity_id

Ref: sot_entity_tables.system_id > sot_systems.system_id


// Source of Truth -> Entity
Ref: sot_config.entity_id > sot_data_entities.entity_id


// Source of Truth -> Business Process
Ref: sot_config.process_id > sot_business_processes.process_id


// Source of Truth -> Source System
Ref: sot_config.source_system_id > sot_systems.system_id


// Source of Truth -> Target System
Ref: sot_config.target_system_id > sot_systems.system_id